<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Motor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tb.motors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A" />

            <SeekBar
                android:id="@+id/sb.motor1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.forward1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward" />

            <Button
                android:id="@+id/bt.backward1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward" />

            <Button
                android:id="@+id/bt.stop1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B" />

            <SeekBar
                android:id="@+id/sb.motor2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.forward2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward" />

            <Button
                android:id="@+id/bt.backward2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward" />

            <Button
                android:id="@+id/bt.stop2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C" />

            <SeekBar
                android:id="@+id/sb.motor3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.forward3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward" />

            <Button
                android:id="@+id/bt.backward3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward" />

            <Button
                android:id="@+id/bt.stop3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D" />

            <SeekBar
                android:id="@+id/sb.motor4"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.forward4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward" />

            <Button
                android:id="@+id/bt.backward4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward" />

            <Button
                android:id="@+id/bt.stop4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </TableRow>

    </TableLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sensors"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TableLayout
        android:id="@+id/tb.sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1: " />

            <TextView
                android:id="@+id/tv.sensorName1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/tv.sensor1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.percent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent" />

            <Button
                android:id="@+id/bt.si1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_unit" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2: " />

            <TextView
                android:id="@+id/tv.sensorName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/tv.sensor2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <Button
                android:id="@+id/bt.percent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent" />

            <Button
                android:id="@+id/bt.si2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_unit" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3: " />

            <TextView
                android:id="@+id/tv.sensorName3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/tv.sensor3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt.percent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent" />

            <Button
                android:id="@+id/bt.si3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_unit" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4: " />

            <TextView
                android:id="@+id/tv.sensorName4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/tv.sensor4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <Button
                android:id="@+id/bt.percent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent" />

            <Button
                android:id="@+id/bt.si4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_unit" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/bt.connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

</LinearLayout>